--- a/app/Kconfig
+++ b/app/Kconfig
@@ -117,6 +117,7 @@ menuconfig ZMK_BLE
     select BT_BAS if !ZMK_SPLIT_ROLE_CENTRAL
     select BT_SETTINGS
     select SETTINGS
+    imply ZMK_BATTERY_REPORTING
 
 if ZMK_BLE
 
@@ -321,6 +322,12 @@ endif
 endmenu
 
 menu "Power Management"
+
+config ZMK_BATTERY_REPORTING
+    bool "Battery level detection/reporting"
+    default n
+    select SENSOR
+    select BT_BAS if ZMK_BLE
 
 config ZMK_IDLE_TIMEOUT
     int "Milliseconds of inactivity before entering idle state (OLED shutoff, etc)"
